[package]
name = "rox_nif"
version = "0.1.0"
authors = ["Ryan Schmukler <rschmukler@gmail.com>"]

[lib]
name = "rox_nif"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = { git = "https://github.com/hansihe/rustler", rev = "b6578ea"}
rustler_codegen = { git = "https://github.com/hansihe/rustler", rev="b6578ea"}
rocksdb = { git = "https://github.com/urbint/rust-rocksdb.git" }
lazy_static = "1.0"
