[package]
name = "rox_nif"
version = "0.1.0"
authors = ["Ryan Schmukler <rschmukler@gmail.com>"]

[lib]
name = "rox_nif"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.21"
rustler_codegen = "0.21"
rocksdb = { git = "https://github.com/urbint/rust-rocksdb.git" }
lazy_static = "1.0"
